<resources>
    <string name="app_name">P20170706</string>
    <string name="str_select">你要出的是......</string>
    <string name="str_rock">石頭</string>
    <string name="str_scissors">剪刀</string>
    <string name="str_paper">布</string>
    <string name="playerPicked">玩家出了</string>
    <string name="computerPicked">電腦出了</string>
    <string name="initScore">0:0</string>
    <string name="UserID">帳號</string>
    <string name="Password">密碼</string>
    <string name="Login">登入</string>
    <string name="Back">返回</string>
    <string name="lableMainActivity">主畫面</string>
    <string name="lableAfterLogin">登入後畫面</string>
    <string name="lableLogin">登入畫面</string>
    <string name="hintUserID">請輸入帳號</string>
    <string name="hintPassword">請輸入密碼</string>
    <string name="savePassword">記住密碼</string>
</resources>
