<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.p20170706.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserID"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editUserID"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/editUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="20sp"
        android:hint="@string/hintUserID"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:textSize="20sp"
        android:hint="@string/hintPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/editPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/colorError"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cbPassword" />

    <CheckBox
        android:id="@+id/cbPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savePassword"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnLogin"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />
</android.support.constraint.ConstraintLayout>
