<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.p20170706.AfterLoginActivity">


    <TextView
        android:id="@+id/logedPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Password"

        app:layout_constraintTop_toBottomOf="@+id/logedUserID"

        app:layout_constraintRight_toRightOf="@+id/logedUserID" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        app:layout_constraintTop_toBottomOf="@+id/logedPassword"

        app:layout_constraintRight_toRightOf="@+id/logedPassword" />

    <TextView
        android:id="@+id/logedUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/UserID"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />


    <ListView
        android:id="@+id/lvHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="16dp" />


</android.support.constraint.ConstraintLayout>
