<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.p20170706.RpsActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_result"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_select"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageButton
            android:id="@+id/btn_paper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/paper"
            android:scaleType="fitCenter"
            android:contentDescription="@string/str_paper"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_rock"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/btn_rock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/rock"
            android:scaleType="fitCenter"
            android:contentDescription="@string/str_rock"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toRightOf="@+id/btn_paper"
            app:layout_constraintRight_toLeftOf="@+id/btn_scissors"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/btn_scissors"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/scissors"
            android:contentDescription="@string/str_scissors"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toRightOf="@+id/btn_rock"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:id="@+id/layoutPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layoutScore"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerPicked" />

            <ImageView
                android:id="@+id/imagePlayer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/layoutPlayer"
            app:layout_constraintRight_toLeftOf="@id/layoutComputer"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initScore" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutComputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/layoutScore"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computerPicked" />

            <ImageView
                android:id="@+id/imageComputer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
